Kubernetes-4/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: multitool-backend
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
