Kubernetes-4/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-app
  ports:
  - port: 80
    targetPort: 80
