Kubernetes-4/manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-container-nodeport
spec:
  type: NodePort
  selector:
    app: multi-container-app
  ports:
  - name: nginx-nodeport
    port: 80
    targetPort: 80
    nodePort: 30080
